headphones/headphones-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: headphones
  name: headphones
  namespace: mediaserver
spec:
  ports:
  - name: "8181"
    port: 8181
    targetPort: 8181
  selector:
    io.kompose.service: headphones
status:
  loadBalancer: {}
