headphones/headphones-ingress-external.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: headphones-external
  namespace: mediaserver
  labels:
    traffic-type: external
    io.kompose.service: headphones
  annotations:
    traefik.frontend.rule.type: PathPrefix
    #traefik.frontend.redirect.entryPoint: https
    #traefik.frontend.redirect.regex: ^http://(.*)
    #traefik.frontend.redirect.replacement: https://$1
    #ingress.kubernetes.io/auth-type: basic
    #ingress.kubernetes.io/auth-secret: ingress-auth
spec:
  rules:
  - host: headphones.cloud.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: headphones
          servicePort: 8181
  - host: headphones.cloud.oraperf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: headphones
          servicePort: 8181
