headphones/headphones-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    io.kompose.service: headphones
  name: headphones
  namespace: mediaserver
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: headphones.internal.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: headphones
          servicePort: 8181
